[Tarun] : Added test for controller and service layer